test: fix regression harness compatibility